fixed a sentence in the abstract

--- a/paper.tex
+++ b/paper.tex
@@ -312,7 +312,7 @@ guarantees to such a compiler backend pass and remain connected to realistic pro
 for this work to serve as a 
 foundation for scaling trustworthy, proof-automated formal verification using proof assistants 
 % - using proof assistants, formal ISA models and an easily extensible architectural design - 
-into backends of mainstream compilers of today and tomorrow.
+into mainstream compiler backends of today and tomorrow.
 
 \end{abstract}
 
