Fix typos in title

--- a/paper.tex
+++ b/paper.tex
@@ -181,8 +181,8 @@
 
 %% Title information
 \title[Short Title]{Automated Lean-native Verification Of
-Optimzing Instruction Selection Against
-Authorative ISA Semantics}
+Optimizing Instruction Selection Against
+Authoritative ISA Semantics}
       %% [Short Title] is optional;
                                       %% when present, will be used in
                                       %% header instead of Full Title.
