Drop short title

--- a/paper.tex
+++ b/paper.tex
@@ -180,7 +180,7 @@
 \begin{document}
 
 %% Title information
-\title[Short Title]{Automated Lean-native Verification Of
+\title{Automated Lean-native Verification Of
 Optimizing Instruction Selection Against
 Authoritative ISA Semantics}
       %% [Short Title] is optional;
