Rethink paper title

--- a/paper.tex
+++ b/paper.tex
@@ -179,9 +179,8 @@
 
 \begin{document}
 
-\title{Automated Lean-native Verification Of
-Optimizing Instruction Selection Against
-Authoritative ISA Semantics}
+\title{Certified Instruction Selection at Scale}
+\subtitle{Validating LLVM against the Authoritative RISC-V Semantics}
 
 %% Author information
 %% Contents and number of authors suppressed with 'anonymous'.
