--- a/paper.tex
+++ b/paper.tex
@@ -180,7 +180,7 @@
 \begin{document}
 
 \title{Certified Instruction Selection at Scale}
-\subtitle{Validating LLVM against the Authoritative RISC-V Semantics}
+\subtitle{Validating LLVM against the Authoritative RISC-V Semantics using Certified BitBlasting}
 
 %% Author information
 %% Contents and number of authors suppressed with 'anonymous'.
